inserimento di ogni pagina del progett

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gio sport Login page</title>
-    <link rel ="stylesheet" type = 'text/css' media ='screen' href='login.css'>
-    <script src = "login.js" type = "module"></script>
+    <link rel ="stylesheet" type = 'text/css' media ='screen' href='/login/index.css'>
+    <script src = "/login/index.js" type = "module"></script>
     <link rel ="shortcut icon" href="#">
 </head>
 <body>
