--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gio sport Login page</title>
+    <title>GioSport Login page</title>
     <link rel ="stylesheet" type = 'text/css' media ='screen' href='webapp/login/index.css'>
     <script src = "webapp/login/index.js" type = "module"></script>
     <link rel ="shortcut icon" href="#">
