commit di metà giornata

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <h1>GIOSPORT</h1>
 
+    <h2 id = "time"></h2>
+
     <div class = "login">
 
         <div class = "username">
@@ -31,7 +33,7 @@
 
         <div>
 
-            <button type = "submit" id = "submit"> Login </button>
+            <button type = "submit" id = "login"> Login </button>
 
         </div>
 
