--- a/webapp/pagina_iniziale/pagina_iniziale.html
+++ b/webapp/pagina_iniziale/pagina_iniziale.html
@@ -17,7 +17,7 @@
     
     <h2 id = "time"></h2>
 
-    <h2> Buongiorno ...<!-- inserire il nome utente del login --> </h2>
+    <h2> Buongiorno ...<!-- inserire il nome utente del login -->! </h2>
 
     </div>
 
