aggiunta intestazopne e corretto particolari

--- a/webapp/pagina_iniziale/pagina_iniziale.html
+++ b/webapp/pagina_iniziale/pagina_iniziale.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina iniziale</title>
-    <link rel ="stylesheet" type = 'text/css' media ='screen' href='pagina_iniziale.js'>
+    <link rel ="stylesheet" type = 'text/css' media ='screen' href='pagina_iniziale.css'>
     <script src = "pagina_iniziale.js" type = "module"></script>
     <link rel ="shortcut icon" href="#">
+    <title>Pagina iniziale</title>
 </head>
 <body>
 
