--- a/webapp/carico/carico.html
+++ b/webapp/carico/carico.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel ="stylesheet" type = 'text/css' media ='screen' href='carico.css'>
+    <script src = "carico.js" type = "module"></script>
+    <link rel ="shortcut icon" href="#">
+    <title>Carico</title>
 </head>
 <body>
     
