--- a/webapp/storici_giornata/storico_giornata.html
+++ b/webapp/storici_giornata/storico_giornata.html
@@ -7,7 +7,7 @@
     <link rel ="stylesheet" type = 'text/css' media ='screen' href='scarico.css'>
     <script src = "scarico.js" type = "module"></script>
     <link rel ="shortcut icon" href="#">
-    <title>Document</title>
+    <title>Storico giornata</title>
 </head>
 <body>
     
