--- a/webapp/html/carico.html
+++ b/webapp/html/carico.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheet" type = 'text/css' media ='screen' href='carico.css'>
-    <script src = "carico.js" type = "module"></script>
+    <link rel ="stylesheet" type = 'text/css' media ='screen' href='/webapp/js/carico.css'>
+    <script src = "/webapp/js/carico.js" type = "module"></script>
     <link rel ="shortcut icon" href="#">
     <title>Carico</title>
 </head>
