ultimo commit di giornata

--- a/webapp/html/scarico.html
+++ b/webapp/html/scarico.html
@@ -37,6 +37,16 @@
 
     </br>
 
+    <div id = "d_art">
+
+        Produttore:
+
+        <input type = "text" name = "p_articolo" id = "pro" disabled>
+
+    </div>
+
+    </br>
+
     <div id = "t_articolo">
 
         Taglia/Misura:
