caricamento degli ultimi commit

--- a/webapp/html/carico.html
+++ b/webapp/html/carico.html
@@ -104,6 +104,13 @@
         <input type = "text" name = "sv_articolo" id = "scn_v" oninput="this.value = this.value.replace(/[^0-9.]/g, '');">
 
     </div>
+
+    </br>
+
+    <button type = "submit" name = "in_articolo" id = "ins"> Carica nuovo articolo </button>
+
+</div>
+
     
 </body>
 </html>
